# app/Models/User.php
@@ -21,6 +21,9 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone',
+        'image',
+        'sub'
     ];
 
     /**
@@ -55,7 +58,9 @@ class User extends Authenticatable implements JWTSubject
     {
         return [
             "email" => $this->email,
-            "name" => $this->name
+            "name" => $this->name,
+            "image" => $this->image,
+            "verified" => $this->email_verified_at
         ];
     }
 }
